--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Velmurugan1401/Business-website#readme",
   "dependencies": {
     "boostrap": "^2.0.0",
-    "bootstrap": "^4.5.3"
+    "bootstrap": "^4.5.3",
+    "echarts": "^4.9.0"
   }
 }
